# ibmecstats

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ibmecstats/: __init__.py  descritiva.py  inferencia.py  metrics.py  plots.py  previsao.py  regressao.py  utils.py
tests/: test_descritiva.py  test_inferencia.py  test_plots_mocked.py  test_previsao_metrics.py  test_previsao_statsmodels.py  test_regressao.py  test_utils.py
