# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ibmecstats"
version = "0.1.4"
authors = [
    { name="Carlos Eduardo Leal de Castro", email="carlos.castro@professores.ibmec.edu.br" },
]
description = "Uma biblioteca de estatística para fins acadêmicos do IBMEC."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "statsmodels>=0.14",
]

[project.urls]
"Homepage" = "https://github.com/carloselcastro/ibmecstats" # Opcional
