[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ibmecstats"
version = "0.1.7"
authors = [
  { name="Carlos Eduardo Leal de Castro", email="carlos.castro@professores.ibmec.edu.br" },
]
description = "Uma biblioteca de estatística para fins acadêmicos do IBMEC."
readme = "README.md"
requires-python = ">=3.11"

license = { text = "MIT" }
keywords = [
  "statistics", "inference", "forecasting", "time-series",
  "education", "ibmec", "seaborn", "statsmodels"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "black>=24.0",
  "build>=1.2",
  "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/carloselcastro/ibmecstats"
Repository = "https://github.com/carloselcastro/ibmecstats"
Issues = "https://github.com/carloselcastro/ibmecstats/issues"

# ----------------------------
# setuptools + src layout
# ----------------------------
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ibmecstats = ["py.typed"]

# ----------------------------
# Ruff (lint)
# ----------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E203"]  # compat com black

# ----------------------------
# Black (format)
# ----------------------------
[tool.black]
line-length = 100
target-version = ["py311"]

# ----------------------------
# Pytest
# ----------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
